promotions edit in news sliders

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -314,7 +314,7 @@
                         Kickstart 2025 with Roobet: Over $1,000,000 in Crypto
                         Gambling Prizes <br />
 
-                        <strong> Offer expires on jan 5th 2025</strong>
+                        <strong>Offer expires on Feb 3rd 2025</strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
@@ -342,61 +342,6 @@
 
                         <strong> Offer Ongoing</strong>
                       </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--roobet santa-->
-                <div class="news-item">
-                  <a href="/News-Articles/Roobet-Promo-Santa-$1000000-Sack/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/roobet-Santa-Sack-news.webp"
-                        alt="ggbet-esl-bangkok-news"
-                        width="300"
-                        height="200"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Santa’s $1,000,000 Sack is Coming to Town and to the
-                        Hottest Online Casino <br />
-
-                        <strong> Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--betfury winter fest-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/BetFury_Winter_Wins_Fest _$450,000_Holiday_Promotion/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/betfuty-winter-fest-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Winter Wins Fest: BetFury’s $450,000 Holiday Promotion &
-                        Tournament !
-                        <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
@@ -454,120 +399,6 @@
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- lootbet blast-->
-                <div class="news-item">
-                  <a href="/News-Articles/LootBet-Blast/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-blast-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Rlootbet blast"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Blast gifts <br />
-                        300€ +30€ free bet +100 free spins <br />
-                        <strong> Offer Ongoing </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- BetFury's Blackjack Holiday Tournaments-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/BetFury-Blackjack-Holiday-Tournaments/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/betfury-blackjack-tournamnet-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Roobet’s-Latest-Sportsbook-Promos"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Join BetFury's Blackjack Holiday Tournaments for a
-                        chance to win a share of €250,000! Play live casino
-                        blackjack and climb the leaderboard for exciting prizes.
-                        <br />
-                        <strong> Offer expires on Jan 10th 2025 </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- loot.bet  -->
-                <div class="news-item">
-                  <a
-                    href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-slot-news.webp"
-                        width="300"
-                        height="200"
-                        alt="lootbet-slot-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Claim 100 FS fot the games week: <br />
-                        Get 100 FS for Book of Sand: <br />
-                        1.Register at Loot.Bet <br />
-                        2.Deposit +20€ <br />
-                        3.Get 100 Merlin's Quest Free Spins
-                        <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Play Now</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <!-- loot.bet quests -->
-                <div class="news-item">
-                  <a
-                    href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-quest.webp"
-                        width="300"
-                        height="200"
-                        alt="lootbet-quest"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Take on daily quests at Loot.Bet in Esports, Sports, and
-                        Games. <br />
-                        Complete them for Free Bets or Spins! <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Play Now</button>
                       </div>
                     </div>
                   </a>
