--- a/News-Articles/Kickstart-2025-with-Roobet/index.html
+++ b/News-Articles/Kickstart-2025-with-Roobet/index.html
@@ -268,9 +268,10 @@
           <h2>Countdown to Liftoff: $202,500 Raffle Launch</h2>
           <p>
             The new year kicks off with Roobet’s massive $202,500 New Year
-            Raffle from <strong>December 30 to January 5</strong>. For every
-            $250 wagered, players earn one raffle ticket, and wagering on the
-            featured slot game of the week doubles your chances with 2x tickets.
+            Raffle from <strong>December 30th to February 3rd</strong>. For
+            every $250 wagered, players earn one raffle ticket, and wagering on
+            the featured slot game of the week doubles your chances with 2x
+            tickets.
           </p>
           <p>
             And it doesn’t stop there—January will feature weekly raffles with
