--- a/index.html
+++ b/index.html
@@ -273,6 +273,59 @@
                     </div>
                   </a>
                 </div>
+                <!-- ggbet freebet vcl emea-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggBet-nice-shot-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        NICE SHOT, SMART BET – FREEBET FOR EVERYONE IN VCT EMEA!
+                        <br />
+
+                        <strong>Offer expires on February 07th</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <!--roobet kickstart 2025-->
+                <div class="news-item">
+                  <a href="/News-Articles/Kickstart-2025-with-Roobet/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Kickstart 2025 with Roobet: Over $1,000,000 in Crypto
+                        Gambling Prizes <br />
+
+                        <strong>Offer expires on Feb 3rd 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!--roobet janyary sportsbook-->
                 <div class="news-item">
                   <a
@@ -299,24 +352,25 @@
                   </a>
                 </div>
 
-                <!--ggbet weekly free spins-->
+                <!--ggbet footballfreebets-->
                 <div class="news-item">
-                  <a href="/News-Articles/Kickstart-2025-with-Roobet/">
+                  <a href="/News-Articles/GGBet-Freebet-on-football/">
                     <div class="news-banner">
                       <img
-                        src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
+                        src="/img/news-banners/GGBet-soccer-freebets-news.webp"
                         width="300"
                         height="200"
-                        alt="Kickstart 2025 with Roobet: Over $1,000,000 in Crypto"
+                        alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
                     </div>
                     <div class="news-content">
                       <h2>
-                        Kickstart 2025 with Roobet: Over $1,000,000 in Crypto
-                        Gambling Prizes <br />
+                        Freebet on football! <br />
+                        Claim up to $130 in freebets and 200% deposit bonus from
+                        $400 on GG.Bet! Deposit now and join the action <br />
 
-                        <strong> Promotion ended</strong>
+                        <strong> Offer expires on February 03rd</strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
@@ -324,6 +378,59 @@
                     </div>
                   </a>
                 </div>
+                 <!-- esports event calendar-->
+                 <div class="news-item">
+                  <a href="/News-Articles/Esports-Event-Calendar-2025/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/espoerts-events.webp"
+                        width="300"
+                        height="200"
+                        alt="Plinko banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        The 2025 esports calendar is packed with exciting
+                        tournaments, featuring top games like CS2, VALORANT, and
+                        League of Legends, promising huge prizes and non-stop
+                        action!
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <!-- ggbet lol cashback-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GGBet-Legendary-Cashback-on-League-of-Legends/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/GGBet-legendary-cashback-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Legendary Cashback on League of Legends! <br />
+                        3 Cashback Periods Await You! <br />
+                        <strong> Offer expires on February 1st</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                
 
                 <!--ggbet weekly free spins-->
                 <div class="news-item">
@@ -344,119 +451,6 @@
 
                         <strong> Offer Ongoing</strong>
                       </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--roobet santa-->
-                <div class="news-item">
-                  <a href="/News-Articles/Roobet-Promo-Santa-$1000000-Sack/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/roobet-Santa-Sack-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Santa’s $1,000,000 Sack is Coming to Town"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Santa’s $1,000,000 Sack is Coming to Town and to the
-                        Hottest Online Casino <br />
-
-                        <strong> Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- gg.bet winter football-->
-                <div class="news-item">
-                  <a href="/News-Articles/GGBet-Winter-football-bonuses/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/ggbet-winter-football-bonuses-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Winter Football Bonuses"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Winter Football Bonuses Are Here – Score Big with
-                        GG.BET! <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--betfury winter fest-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/BetFury_Winter_Wins_Fest _$450,000_Holiday_Promotion/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/betfuty-winter-fest-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Winter Wins Fest: BetFury’s $450,000 Holiday Promotion"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Winter Wins Fest: BetFury’s $450,000 Holiday Promotion &
-                        Tournament !
-                        <br />
-                        <strong> Promotion ended</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- roobets sportsbook promo-->
-                <div class="news-item">
-                  <a href="/News-Articles/Roobet-Sportsbook-Promotions/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/roobet-football-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Score Big with Roobet’s Sportsbook Promotions"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Score Big with Roobet’s Sportsbook Promotions This
-                        Holiday Season !
-                        <br />
-                        - NFL Comeback Double - Dec 1 - Jan 7 2025
-                        <br />
-                        - NBA Cup 20% Cashback - Dec 10 – 18
-                        <br />
-                        - CS2 Shanghai Major 20% Cashback - 5-15 Dec!
-                        <br />
-                        <strong> Offer expires on Jan 7th 2025</strong>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
@@ -516,143 +510,6 @@
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- lootbet blast-->
-                <div class="news-item">
-                  <a href="/News-Articles/LootBet-Blast/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-blast-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Rlootbet blast"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Blast gifts 300€ + 30€ free bet +100 free spins <br />
-                        <strong> Promotion ended </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- BetFury's Blackjack Holiday Tournaments-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/BetFury-Blackjack-Holiday-Tournaments/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/betfury-blackjack-tournamnet-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Roobet’s-Latest-Sportsbook-Promos"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Join BetFury's Blackjack Holiday Tournaments for a
-                        chance to win a share of €250,000! Play live casino
-                        blackjack and climb the leaderboard for exciting prizes.
-                        <br />
-                        <strong> Offer expires on Jan 10th 2025 </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- bcgame-horce-racing  -->
-                <div class="news-item">
-                  <a href="/News-Articles/BC.GAME-Horse-Racing-FreeBets/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/bcgame-horeseriding-news.webp"
-                        width="300"
-                        height="200"
-                        alt="bcgame-horeseriding free bets"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        BC.GAME Horse Racing FreeBets – Earn Up to $50 for New
-                        Members<br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- loot.bet  -->
-                <div class="news-item">
-                  <a
-                    href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-slot-news.webp"
-                        width="300"
-                        height="200"
-                        alt="lootbet-slot-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Claim 100 FS fot the games week: <br />
-                        1.Register at Loot.Bet <br />
-                        2.Deposit +20€ <br />
-                        3.Get 100 Merlin's Quest Free Spins
-                        <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Play Now</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <!-- loot.bet quests -->
-                <div class="news-item">
-                  <a
-                    href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/lootbet-quest.webp"
-                        width="300"
-                        height="200"
-                        alt="lootbet-quest"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Take on daily quests at Loot.Bet in Esports, Sports, and
-                        Games. <br />
-                        Complete them for Free Bets or Spins! <br />
-                        <strong>Promotion ended</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Play Now</button>
                       </div>
                     </div>
                   </a>
