--- a/Reviews-page/CloudBet/index.html
+++ b/Reviews-page/CloudBet/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      Cloudbet Casino Review 2025: Crypto Casino With WB 100% up tp 5 BTC and
+      Cloudbet Casino Review 2025: Crypto Casino With WB 100% up to 5 BTC and
       more!
     </title>
     <!-- breadcrumbs -->
