--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,34 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!--bcgame nfl 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/BC.Game-NFL-Playoffs-Two-Touchdown-Guarantee/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bc.game-nfl-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        NFL Playoffs Two Touchdown Guarantee 100% refund in Free
+                        Bet up to $300! <br />
+
+                        <strong> Offer expires on Feb 9th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!--roobet janyary sportsbook-->
                 <div class="news-item">
                   <a
