--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,34 @@
                     </div>
                   </a>
                 </div>
+                <!--ggbet chinese newyear-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-chinese-newyear-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Celebrate the Chinese New Year with Incredible Bonuses
+                        and Free Spins! <br />
+
+                        <strong>Offer expires on January 26th</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!--roobet kickstart 2025-->
                 <div class="news-item">
