--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,36 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!--bcgame cricket freebets-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/BC.Game-Cricket-Stake-Back-Challenge/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-cricket-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Cricket Promotion by BC.GAME
+                        <br />
+                        Win or Lose, Grab Your Freebet Bonus!
+                        <br />
+                        <strong> Offer expires on Feb 12th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--bcgame nfl 2025-->
                 <div class="news-item">
                   <a
