--- a/News-Articles/BetFury-Promo-Code/index.html
+++ b/News-Articles/BetFury-Promo-Code/index.html
@@ -250,45 +250,39 @@
               <button>Find It Now</button>
             </a>
           </div>
-
+          <h2>Unlock Exclusive Bonuses with BetFury Promo Codes</h2>
           <p>
-            Find promo codes with exclusive Bonuses from BetFury. Keep an eye on
-            our social media, emails, and news.
+            Want to grab awesome bonuses? BetFury promo codes are the way to go!
+            Stay engaged with BetFury’s updates to ensure you never miss out.
           </p>
 
-          <h2>Catch Your Promo Code</h2>
-          <p>
-            Hunt for bonuses in our social media, emails, and on the website.
-            Stay connected to maximize your chances!
-          </p>
-
-          <h2>Step-by-Step Guide</h2>
+          <h3>How to Get Your Bonus</h3>
           <ol>
             <li>
-              <strong>Step 1: Catch your promo code</strong><br />Look out for
-              promo codes on social media platforms, email newsletters, or the
-              BetFury website.
+              <strong>Find Your Promo Code:</strong>
+              Check BetFury’s social media, email updates, and website regularly
+              to discover promo codes as they become available.
             </li>
             <li>
-              <strong>Step 2: Activate the promo code</strong><br />Be quick!
-              Promo codes have limited availability and short lifetimes, so
-              activate them as soon as possible.
+              <strong>Redeem Quickly:</strong>
+              These codes are limited and expire fast, so don’t wait! Grab yours
+              and activate it right away.
             </li>
             <li>
-              <strong>Step 3: Get Cool Bonuses</strong><br />Enjoy exciting
-              rewards like Free Spins, Deposit Bonuses, Free Bets, or even a
-              crypto Bonus added directly to your account.
+              <strong>Enjoy the Rewards:</strong>
+              Once activated, you can receive Free Spins, Deposit Bonuses, Free
+              Bets, or even crypto prizes delivered directly to your account.
             </li>
           </ol>
 
-          <h2>Stay Connected for More Promo Codes</h2>
+          <h3>Stay Connected for More Deals</h3>
           <p>
-            Make sure you’re following BetFury's social media channels to stay
-            up-to-date with the latest promo codes. These bonuses can unlock a
-            wide range of perks, making your betting and gaming experience even
-            better.
+            Follow BetFury on all their platforms to stay in the loop. Promo
+            codes are your gateway to bigger rewards and a better gaming
+            experience.
           </p>
 
+          <p>Keep an eye out and start collecting those bonuses now!</p>
           <div class="claim-news-bonus">
             <a
               href=" https://betfury.bet/d345852ac  "
