--- a/News-Articles/BetFury-Promo-Code/index.html
+++ b/News-Articles/BetFury-Promo-Code/index.html
@@ -241,7 +241,7 @@
           />
         </a>
         <div class="news-content-main">
-          <h1>Use a Promo Code and Get a Bonus</h1>
+          <h1>Redeem a Promo Code for Exclusive Bonuses</h1>
           <div class="claim-news-bonus">
             <a
               href=" https://betfury.bet/d345852ac  "
