--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,34 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!--bcgame 5 major leagues-->
+                <div class="news-item">
+                  <a href="/News-Articles/BC.Game-5-Major-Leagues-Begin/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-5major-leagues-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        BC.Game European Top 5 Leagues Weekly Freebet Promotion!
+                        <br />
+
+                        <strong> Offer expires on March 30th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--bcgame cricket freebets-->
                 <div class="news-item">
                   <a
