--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,32 @@
                     </div>
                   </a>
                 </div>
+                <!--bc game giftcode-->
+                <div class="news-item">
+                  <a href="/News-Articles/BC.Game-Weekly-Gift-Codes/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-gift-code-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Weekly Gift Codes for 20 Free Spins - BC.Game Promotion
+                        ! <br />
+
+                        <strong> Offer expires on February 25th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!--ggbet chinese newyear-->
                 <div class="news-item">
                   <a
@@ -478,7 +504,7 @@
                     </div>
                   </a>
                 </div>
-               
+
                 <!-- snoops hotbox  -->
                 <div class="news-item">
                   <a href="/News-Articles/Snoop's-Hot-Box-Game/">
