--- a/index.html
+++ b/index.html
@@ -273,6 +273,34 @@
                     </div>
                   </a>
                 </div>
+
+                <!--bc game giftcode-->
+                <div class="news-item">
+                  <a href="/News-Articles/BC.Game-Weekly-Gift-Codes/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-gift-code-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Weekly Gift Codes for 20 Free Spins - BC.Game Promotion
+                        ! <br />
+
+                        <strong> Offer expires on February 25th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--ggbet chinese newyear-->
                 <div class="news-item">
                   <a
@@ -301,6 +329,7 @@
                     </div>
                   </a>
                 </div>
+
                 <!-- ggbet freebet vcl emea-->
                 <div class="news-item">
                   <a
@@ -329,6 +358,7 @@
                     </div>
                   </a>
                 </div>
+
                 <!--roobet kickstart 2025-->
                 <div class="news-item">
                   <a href="/News-Articles/Kickstart-2025-with-Roobet/">
@@ -354,6 +384,7 @@
                     </div>
                   </a>
                 </div>
+
                 <!--roobet janyary sportsbook-->
                 <div class="news-item">
                   <a
@@ -406,6 +437,7 @@
                     </div>
                   </a>
                 </div>
+
                  <!-- esports event calendar-->
                  <div class="news-item">
                   <a href="/News-Articles/Esports-Event-Calendar-2025/">
@@ -431,6 +463,7 @@
                     </div>
                   </a>
                 </div>
+
                 <!-- ggbet lol cashback-->
                 <div class="news-item">
                   <a
@@ -457,9 +490,7 @@
                     </div>
                   </a>
                 </div>
-
                 
-
                 <!--ggbet weekly free spins-->
                 <div class="news-item">
                   <a href="/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/">
