--- a/News-Articles/BC.Game-5-Major-Leagues-Begin/index.html
+++ b/News-Articles/BC.Game-5-Major-Leagues-Begin/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BC.Game 5 Major Leagues Begin",
-            "item": "https://www.all4wins.com/News-Articles/BC.Game-5-Major-Leagues-Begin/""
+            "item": "https://www.all4wins.com/News-Articles/BC.Game-5-Major-Leagues-Begin/"
           }
         ]
       }
