--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,29 @@
                     </div>
                   </a>
                 </div>
+                <!--roobet february fever-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-February-Feaver/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Roobet-February-Fever.webp"
+                        width="300"
+                        height="200"
+                        alt="roobet february fever"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        February Fever: Love, Luck & Big Wins at Roobet <br />
+                        <strong>Offer expires on Feb 28th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!--bc game giftcode-->
                 <div class="news-item">
                   <a href="/News-Articles/BC.Game-Weekly-Gift-Codes/">
@@ -322,60 +345,6 @@
                     </div>
                   </a>
                 </div>
-                <!--ggbet chinese newyear-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/ggbet-chinese-newyear-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Celebrate the Chinese New Year with Incredible Bonuses
-                        and Free Spins! <br />
-
-                        <strong>Offer expires on January 26th</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--roobet kickstart 2025-->
-                <div class="news-item">
-                  <a href="/News-Articles/Kickstart-2025-with-Roobet/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Kickstart 2025 with Roobet: Over $1,000,000 in Crypto
-                        Gambling Prizes <br />
-
-                        <strong>Offer expires on Feb 3rd 2025</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
 
                 <!--ggbet weekly free spins-->
                 <div class="news-item">
@@ -396,32 +365,6 @@
 
                         <strong> Offer Ongoing</strong>
                       </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--betfury winter drops-->
-                <div class="news-item">
-                  <a href="/News-Articles/Bet-fury-Winter-Drops-Festival/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/betfury-winter-drop-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        BetFury Winter Drops Festival: Win Your Share of €50,000
-                        in Prizes! <br />
-                        <strong> Offer expires on Jan 31st 2025</strong>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
