--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,29 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!--roobet chealsea fc-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-Chelsea-FC/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-Chelsea-FC-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Roobet & Chelsea FC: A Winning Combination <br />
+                        <strong>Offer expires on Feb 28th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!--bcgame 5 major leagues-->
                 <div class="news-item">
