--- a/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/index.html
+++ b/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/index.html
@@ -263,7 +263,7 @@
           </p>
 
           <p>
-            The promotion runs until <strong>March 1, 2025</strong> – rise to
+            The promotion runs until <strong>March 1st 2025</strong> – rise to
             the challenge and prove you’re the true
             <strong>Master of Hextech!</strong>
           </p>
