--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,33 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!--ggbet tenis bonuses fec 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GG.Bet-Incredible-Tennis-Bonuses-All-Month-Long/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-tenis-bonuses-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Incredible Tennis Bonuses All Month Long! <br />
+                        <strong>Offer expires on March 3rd 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--roobet chealsea fc-->
                 <div class="news-item">
                   <a href="/News-Articles/Roobet-Chelsea-FC/">
