--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,27 @@
                     </div>
                   </a>
                 </div>
+                 <!-- betfury-promocode-->
+                 <div class="news-item">
+                  <a href="/News-Articles/Betfury-Promo-Code/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/betfury-promo-code-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>Unlock BetFury Bonuses with Promo Codes</h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!--roobet february fever-->
                 <div class="news-item">
                   <a href="/News-Articles/Roobet-February-Feaver/">
