--- a/Esports/index.html
+++ b/Esports/index.html
@@ -280,7 +280,29 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
-                <!-- esports event calendar-->
+                <!-- betfury-promocode-->
+                <div class="news-item">
+                  <a href="/News-Articles/Betfury-Promo-Code/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/betfury-promo-code-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>Unlock BetFury Bonuses with Promo Codes</h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- ggbet lol freebets-->
                 <div class="news-item">
                   <a
                     href="/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/"
