--- a/Sports/index.html
+++ b/Sports/index.html
@@ -281,6 +281,28 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                 <!-- betfury-promocode-->
+                 <div class="news-item">
+                  <a href="/News-Articles/Betfury-Promo-Code/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/betfury-promo-code-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>Unlock BetFury Bonuses with Promo Codes</h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--ggbet tenis bonuses fec 2025-->
                 <div class="news-item">
                   <a
